[gd_scene load_steps=2 format=3 uid="uid://cnt0ne6255j1a"]

[ext_resource type="Script" path="res://src/GUI/item_panel.gd" id="1_c3rqg"]

[node name="ItemPanel" type="PanelContainer"]
offset_right = 51.0
offset_bottom = 50.0
script = ExtResource("1_c3rqg")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="NameLabel" type="RichTextLabel" parent="VBoxContainer"]
layout_mode = 2
text = "Name"
fit_content = true
scroll_active = false

[node name="DescriptionLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Description"

[node name="QuantityLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Quantity: 1"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="UseButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Use"

[node name="DropButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Drop"

[connection signal="pressed" from="VBoxContainer/HBoxContainer/DropButton" to="." method="_on_drop_button_pressed"]
